<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="rating_successful">Product was successfully rated</string>
    <string name="rating_unsuccesful">Product was not rated</string>
    <string name="navigation_button_history">History</string>
    <string name="navigation_button_stream">Stream</string>
    <string name="navigation_button_scan">Scan</string>
    <string name="navigation_button_home">Home</string>
    <string name="anonymous_username">Anonymous</string>
	<string name="app_name">my2cents</string>
	<string name="app_notes">by ETH Zurich [v1.1.x BETA]</string>
	<string name="app_url">http://my2cents.mobi</string>

	<string name="main_header">Comments on products</string>
	<string name="stream_header">What are others commenting on?</string>
	<string name="history_header">Products you have viewed before</string>
	<string name="settings_header">Settings</string>
 
    <string name="home_button_scan_header">Scan a product</string>
    <string name="home_button_scan">Scan a product\'s barcode to read others\' comments and write your own</string>

    <string name="home_button_stream_header">Follow live stream</string>
    <string name="home_button_stream">See what others are commenting on</string>

    <string name="home_button_history_header">Track your products</string>
    <string name="home_button_history">Keep track of products you discovered and check for new comments</string>

    <string name="home_button_twitter_login_header">Login with Twitter</string>
    <string name="home_button_twitter_login">Personalize your comments and share them with your followers</string>

    <string name="home_button_twitter_share_header">Share comments on Twitter</string>
    <string name="home_button_twitter_share">Personalize your comments and share them with your followers on Twitter</string>

    <string name="my2cents_is_evolving">my2cents is evolving - this is the first public release of the application, please <a href='mailto:feedback@my2cents.mobi'>leave your comments and suggestions</a> on our product</string>
    <string name="my2cents_is_social">Personalize your comments and share them with your followers</string>
    <string name="my2cents_is_empowering">my2cents is empowering - you can get real life consumers recommendations and insights and can use it to ask questions and leave notes</string>

	
	<string name="button_back">Back</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_close">Close</string>
	<string name="button_done">Done</string>
	<string name="button_ok">OK</string>
	<string name="button_send">Send</string>
	<string name="button_scan">Scan</string>
	<string name="button_home">Home</string>
	<string name="button_history">History</string>
	<string name="button_stream">Stream</string>
	<string name="button_search">Submit</string>
	<string name="button_login_invitation">Please login to comment</string>
    <string name="button_manual_barcode_input">Doesn\'t work? Type the number instead</string>
	
	<string name="radio_button_barcode">Barcode</string>
	<string name="radio_button_title">Title</string>
	
	<string name="search_by_title">Search by title</string>
	<string name="search_by_code">Search by code</string>
	<string name="search_hint">Enter barcode number</string>
	<string name="comment_hint">Enter your comment</string>

	<string name="menu_refresh">Refresh</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_search">Search</string>
	<string name="menu_info">Info</string>
	<string name="menu_help">Help</string>
	<string name="menu_clear_history">Clear History</string>
<string name="thumbs_up">i like</string>
<string name="thumbs_down">i dislike</string>
	<string name="scanner_default_status">Place a barcode inside the viewfinder to scan it.</string>	
	<string name="message_camera_problem">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
	
    <string name="settings_token">Token</string>
    <string name="settings_token_secret">Token secret</string>
    <string name="settings_login">Login with Twitter</string>
    <string name="settings_login_checked">Logged in</string>
    <string name="settings_login_desc_out">You are not logged in</string>
    <string name="settings_login_desc_in">You are logged in</string>
    <string name="settings_twitter">Post to Twitter</string>
    <string name="settings_twitter_description">Tweet your comments</string>
    
    <string name="settings_scanner_category">Scanner</string>
	<string name="settings_play_beep">Beep</string>
	<string name="settings_play_beep_summary">Beep when a barcode is found</string>
	<string name="settings_vibrate">Vibrate</string>
	<string name="settings_vibrate_summary">Vibrate when a barcode is found</string>
	<string name="settings_flashlight">Use front light</string>
  	<string name="settings_flashlight_summary">Improves scanning in low light on some phones, but may cause glare</string>
	
	<string name="settings_general_category">General</string>
    <string name="settings_send_feedback">Send feedback</string>
    <string name="settings_send_feedback_summary">Send us feedback on my2cents</string>
    <string name="settings_share_location">Share location</string>
    <string name="settings_share_location_summary">Send location to my2cents</string>
	<string name="settings_helpful_tips">Helpful tips</string>
	<string name="settings_helpful_tips_summary">Open the helpful tips the next time my2cents starts</string>
	
	<string name="settings_first_start">First start</string>
	<string name="settings_client_id">Client ID</string>
	
	<string name="polling_interval">Refresh Interval</string>
	<string name="settings_background">background settings</string>
	<string name="polling_interval_summary">background polling</string>
	<string name="time_30_sec">30 sec</string>
	<string name="time_1_min">1 min</string>
	<string name="time_5_min">5 min</string>
	<string name="time_30_min">30 min</string>
	<string name="time_1_hour">1 hour</string>
	
	<string name="show_virtual_keyboard">Show virtual keyboard</string>
	
	<string name="status_last_update">Last update:</string>
	
	<string name="message_authorize">Please login with your Twitter account</string>
	<string name="message_please_wait">Please wait ...</string>
	<string name="message_no_comments">No comments yet. Add your comment!</string>
	<string name="message_no_stream">No comments yet.</string>
	<string name="message_no_products">No products.</string>
	<string name="message_empty_history">This list will show products you have viewed in the past. You have not viewed any products yet.</string>
    <string name="message_stream_loading">Loading recent comments ...</string>
    <string name="message_product_info_loading">Loading product information ...</string>

    <string name="message_successful_authorization">Authentication successful</string>
    <string name="message_unsuccessful_authorization">Authentication failed</string>
	
	<string name="search_title">Enter a barcode</string>

	<string name="help_header">About my2cents</string>
	
	<string name="product_details">Show product details</string>
	
	<string name="last_version">Last version</string>
	
	<string name="unknown_product">Unknown product</string>
    <string name="message_comment_posted_successfully">Comment posted successfully</string>
    <string name="progress_dialog_sending">Sending...</string>
    <string name="notification_message_no_products_found">No products found.</string>
    <string name="progress_dialog_loading">Loading...</string>
    
    <string name="error_message_no_network_connection">No network connection</string>
    
    <string name="error_message_no_server_connection">Cannot connect to my2cents server</string>
    <string name="msg_default_status">Cannot connect to my2cents server</string>
    <string name="account_dialog_username">Cannot connect to my2cents server</string>
    <string name="account_dialog_password">Cannot connect to my2cents server</string>
    <string name="account_dialog_show_password">Cannot connect to my2cents server</string>

    <string name="product_view">give your 2cents! on products</string>
    <string name="web_view">my2cents browser</string>
    
    <string name="client_token">client_token</string>
</resources>
