<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/NavigationBar"
	android:layout_width="fill_parent"
	android:layout_height="@dimen/bar_height"
	android:gravity="center"
	android:background="@drawable/bar"
	android:layout_alignParentBottom="true" android:orientation="horizontal">
	<Button
		android:id="@+id/NavigationButtonHome"
		style="@style/BarButton"
		android:drawableTop="@drawable/home_button"
		android:text="@string/navigation_button_home" />
	<View
		style="@style/BarDivider" />
	<Button
		android:id="@+id/NavigationButtonScan"
		style="@style/BarButton"
		android:drawableTop="@drawable/scan_button"
		android:text="@string/navigation_button_scan" />
	<View
		style="@style/BarDivider" />
	<Button
		android:id="@+id/NavigationButtonStream"
		style="@style/BarButton"
		android:drawableTop="@drawable/stream_button"
		android:text="@string/navigation_button_stream" />
	<View
		style="@style/BarDivider" />
	<Button
		android:id="@+id/NavigationButtonHistory"
		style="@style/BarButton"
		android:drawableTop="@drawable/history_button"
		android:text="@string/navigation_button_history" />
</LinearLayout>