<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="fill_parent"
	android:padding="10dp"
	android:layout_width="fill_parent">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/account_dialog_username" />
	<EditText
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:imeOptions="flagNoEnterAction"
		android:id="@+id/usernameEditText"
		android:inputType="textPersonName" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/account_dialog_password"></TextView>
	<EditText
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/passwordEditText"
		android:imeOptions="flagNoEnterAction"
		android:inputType="textPassword"></EditText>
	<CheckBox
		android:layout_height="wrap_content"
		android:id="@+id/showPasswordCheckBox"
		android:text="@string/account_dialog_show_password"
		android:layout_width="fill_parent"></CheckBox>
	<LinearLayout
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:layout_marginTop="10px">
		<Button
			android:layout_height="wrap_content"
			android:text="@string/button_done"
			android:id="@+id/accountDoneButton"
			android:layout_width="wrap_content"
			android:width="110sp"></Button>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/accountCancelButton"
			android:text="@string/button_cancel"
			android:width="110sp"></Button>
	</LinearLayout>
</LinearLayout>