<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dp">
	<EditText
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:imeOptions="flagNoEnterAction"
		android:id="@+id/InputEditText"
		android:hint="@string/search_by_title"
		android:inputType="textShortMessage" />
	<RadioGroup
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:id="@+id/SearchRadioGroup">
		<RadioButton
			android:layout_height="wrap_content"
			android:id="@+id/TitleRadioButton"
			android:text="@string/radio_button_title"
			android:layout_weight="0.5"
			android:layout_width="wrap_content"
			android:checked="true"></RadioButton>
		<RadioButton
			android:layout_height="wrap_content"
			android:id="@+id/BarcodeRadioButton"
			android:text="@string/radio_button_barcode"
			android:layout_weight="0.5"
			android:layout_width="wrap_content"></RadioButton>
	</RadioGroup>
	<Button
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:text="@string/button_search"
		android:id="@+id/SearchButton"></Button>
</LinearLayout>