<?xml version="1.0" encoding="UTF-8"?>
	<!--
		Copyright (C) 2008 ZXing authors Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
		file except in compliance with the License. You may obtain a copy of the License at
		http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
		express or implied. See the License for the specific language governing permissions and limitations under the License.
	-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/help_view"
	android:orientation="vertical">
	<RelativeLayout
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:layout_height="wrap_content"
		android:background="@color/header_backgroung">
		<TextView
			android:text="@string/app_name"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:id="@+id/AppNameTextView"
			android:textColor="@color/header_text"
			android:textSize="@dimen/header_text"
			android:padding="@dimen/header_padding"></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/AppNameTextView"
			android:layout_marginLeft="125sp"
			android:text="@string/app_notes"
			android:id="@+id/AppNotesTextView"
			android:textColor="@color/header_text"
			android:textSize="@dimen/header_sub_text"
			android:padding="@dimen/header_sub_padding"></TextView>
	</RelativeLayout>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/InfoTextView"
		android:background="@color/info_backgroung"
		android:textColor="@color/info_text"
		android:textSize="@dimen/info_text"
		android:padding="@dimen/info_padding"
		android:text="@string/help_header"></TextView>
	<WebView
		android:id="@+id/help_contents"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:fadingEdge="vertical"
		android:fadingEdgeLength="16dip" android:layout_width="wrap_content"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:orientation="horizontal"
		android:gravity="center"
		android:padding="8px"
		android:weightSum="1"
		android:background="@color/help_button_view">
		<Button
			android:id="@+id/back_button"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="0.35"
			android:text="@string/button_back" />
		<Button
			android:id="@+id/done_button"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="0.35"
			android:text="@string/button_done" />
	</LinearLayout>
</LinearLayout>