<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<RelativeLayout
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:layout_height="wrap_content"
		android:background="@color/header_backgroung">
		<TextView
			android:text="@string/app_name"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:id="@+id/AppNameTextView"
			android:textColor="@color/header_text"
			android:textSize="@dimen/header_text"
			android:padding="@dimen/header_padding"></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/AppNameTextView"
			android:layout_marginLeft="125sp"
			android:text="@string/app_notes"
			android:id="@+id/AppNotesTextView"
			android:textColor="@color/header_text"
			android:textSize="@dimen/header_sub_text"
			android:padding="@dimen/header_sub_padding"></TextView>
	</RelativeLayout>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/product_layout_padding"
		android:background="@color/info_backgroung"
		android:id="@+id/ProductInfoLayout"
		android:visibility="gone">
		<ImageView
			android:layout_width="wrap_content"
			android:layout_marginRight="6dip"
			android:layout_height="wrap_content"
			android:adjustViewBounds="true"
			android:id="@+id/ProductImageView"
			android:maxHeight="@dimen/product_image_max_size"
			android:maxWidth="@dimen/product_image_max_size" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/ProductImageView"
			android:id="@+id/ProductNameTextView"
			android:textSize="@dimen/product_name_text"
			android:textColor="@color/product_name_text"
			android:layout_marginBottom="5dip"
			android:clickable="true" />
		<TextView
			android:layout_height="wrap_content"
			android:id="@+id/AffiliateTextView"
			android:layout_toRightOf="@id/ProductImageView"
			android:layout_below="@id/ProductNameTextView"
			android:textSize="@dimen/affiliate_text"
			android:textColor="@color/affiliate_text" android:layout_width="fill_parent" android:gravity="right"/>
	</RelativeLayout>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/StatusRelativeLayout"
		android:background="@color/status_backgroung"
		android:padding="5dip"
		android:visibility="gone">
		<ProgressBar
			android:layout_height="24dip"
			android:layout_width="24dip"
			android:id="@+id/StatusProgressBar"
			android:layout_marginRight="5dip"></ProgressBar>
		<TextView
			android:layout_width="fill_parent"
			android:id="@+id/StatusTextView"
			android:textColor="@color/status_text"
			android:textSize="@dimen/status_text"
			android:layout_toRightOf="@id/StatusProgressBar"
			android:layout_centerVertical="true"
			android:text="@string/message_product_info_loading"
			android:layout_height="wrap_content"></TextView>
	</RelativeLayout>
	<ListView
		android:layout_width="fill_parent"
		android:scrollbars="vertical"
		android:choiceMode="none"
		android:clickable="false"
		android:layout_height="fill_parent"
		android:id="@id/android:list"
		android:layout_weight="1">
	</ListView>
	<ScrollView
		android:id="@id/android:empty"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_weight="1">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/message_no_comments"
			android:textSize="@dimen/empty_list_text"
			android:padding="@dimen/empty_list_padding"
			android:gravity="center"
			android:layout_gravity="center" />
	</ScrollView>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/LoginLayout"
		android:orientation="vertical"
		android:background="@color/comment_editor_background"
		android:padding="@dimen/comment_editor_padding"
		android:visibility="gone">
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/button_login_invitation"
			android:id="@+id/LoginButton" />
	</LinearLayout>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/CommentEditorLayout"
		android:background="@color/comment_editor_background"
		android:paddingLeft="@dimen/comment_editor_padding"
		android:paddingRight="@dimen/comment_editor_padding"
		android:paddingTop="@dimen/comment_editor_padding">
		<Button
			android:text="@string/button_send"
			android:layout_width="wrap_content"
			android:id="@+id/SendButton"
			android:layout_alignParentRight="true"
			android:layout_height="wrap_content" />
		<EditText
			android:layout_height="wrap_content"
			android:id="@+id/CommentEditText"
			android:hint="@string/comment_hint"
			android:layout_width="fill_parent"
			android:layout_toLeftOf="@id/SendButton"
			android:imeOptions="actionSend|flagNoEnterAction"
			android:inputType="textCapSentences|textAutoCorrect|textMultiLine|textImeMultiLine" />
		<Gallery
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:longClickable="true"
			android:unselectedAlpha="0.3"
			android:id="@+id/TagsGallery"
			android:spacing="@dimen/tab_gallery_spacing"
			android:layout_below="@id/CommentEditText" />
	</RelativeLayout>
	<LinearLayout
		android:layout_height="wrap_content"
		android:id="@+id/ToolbarLayout"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:background="@color/status_backgroung"
		android:paddingLeft="3dip"
		android:paddingRight="3dip"
		android:paddingTop="3dip">
		<ImageButton
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
			android:scaleType="centerInside"
			android:layout_width="wrap_content"
			android:id="@+id/ImageButtonHome"
			android:src="@drawable/home_icon"></ImageButton>
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
			android:scaleType="centerInside"
			android:id="@+id/ImageButtonScan"
			android:src="@drawable/scan_icon"></ImageButton>
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
			android:scaleType="centerInside"
			android:id="@+id/ImageButtonStream"
			android:src="@drawable/stream_icon"></ImageButton>
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
			android:scaleType="centerInside"
			android:id="@+id/ImageButtonHistory"
			android:src="@drawable/history_icon"></ImageButton>
	</LinearLayout>
</LinearLayout>